# capitol-tracker

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
assets/: pollList.csv
assets/congress-generic-ballot/: generic_polllist.csv  generic_topline.csv
backend/: Dockerfile  pyproject.toml
backend/assets/: pollList.csv
backend/server/: api.py  main.py
backend/server/api/: data_node.py  event.py  health.py  measurements.py  poll.py  poll_data.py  series.py
backend/server/api/workers/: congressional_outlook.py  trump_approval_rating.py
backend/server/models/: data_node.py  event.py  event_search.py  poll.py  poll_list_node.py  search.py
backend/server/openapi/: specs.yaml
backend/server/resource/: data_node.py  event.py  poll.py  poll_list.py
backend/tests/: resource_data_node.test.py
backend/workers/: get.py  new_task.py  send.py
events/: Package.resolved  Package.swift  docker-compose.yml
events/Sources/App/: routes.swift
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js  App.svelte  index.template.html  routes.js
frontend/src/components/: Home.svelte
frontend/src/resource/: asyncCompose.js  getDataFromApi.js
landing/: index.html
landing/style/: main.css
python_sandbox/: api.py
python_sandbox/models/: poll_list_node.py
python_sandbox/resource/: poll_list.py
tests/: test_python_sandbox.py
workers/: pyproject.toml
workers/tests/: test_workers.py
workers/workers/: celery.py  run_task.py  tasks.py
workers/workers/ex/: get.py  new_task.py  send.py
(+3 files in other folders)
