[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tim Holmes <timholmez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask_cors = "^3.0.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
