[tool.poetry]
name = "workers"
version = "0.1.0"
description = ""
authors = ["Tim Holmes <timholmez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.4.4"
future = "^0.18.2"
flower = "^0.9.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
